--- a/package.json
+++ b/package.json
@@ -8,33 +8,44 @@
     "dexter-ts": "./src/index.tsx"
   },
   "scripts": {
-    "start": "bun run src/index.tsx",
-    "dev": "bun --watch run src/index.tsx",
+    "cli": "bun run src/index.tsx",
+    "cli:dev": "bun --watch run src/index.tsx",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch"
   },
   "dependencies": {
-    "@langchain/anthropic": "^1.1.3",
-    "@langchain/core": "^1.1.0",
-    "@langchain/google-genai": "^2.0.0",
+    "@langchain/anthropic": "^1.2.3",
+    "@langchain/core": "^1.1.4",
+    "@langchain/google-genai": "^2.0.4",
     "@langchain/openai": "^1.1.3",
     "dotenv": "^17.2.3",
     "ink": "^6.5.1",
     "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
-    "react": "^19.2.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "zod": "^4.1.13",
     "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "@types/bun": "latest",
-    "@types/jest": "^29.5.14",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/bun": "^1.3.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.2",
     "@types/react": "^19.2.7",
+    "autoprefixer": "^10.4.22",
     "babel-jest": "^30.2.0",
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "ts-jest": "^29.2.5",
     "typescript": "^5.9.3"
   }
